--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                                 <select id="area" name="select" class="form-select">
                                     <option value="">エリアを選択</option>
                                     <option value="fly-world">世界</option>
-                                    <option value="fly-hawaii">ハワイ諸島</option>
-                                    <option value="fly-bali">バリ島</option>
+                                    <option value="fly-hawaii">ハワイ</option>
+                                    <option value="fly-bali">バリ</option>
                                     <option value="fly-singapore">シンガポール</option>
                                     <option value="fly-maldives">モルディブ</option>
                                     <option value="fly-polynesia">ポリネシア</option>
