--- a/index.html
+++ b/index.html
@@ -97,7 +97,15 @@
                                 </div>
                                 <div class="form-check">
                                     <input type="checkbox" id="luxury_hotelsCheckbox">
-                                    <label for="luxury_hotelsCheckbox">ラグジュアリー・ホテル（世界）</label>
+                                    <label for="luxury_hotelsCheckbox">ラグジュアリー・ホテル</label>
+                                </div>
+                                <div class="form-check">
+                                    <input type="checkbox" id="private_jetsCheckbox">
+                                    <label for="private_jetsCheckbox">Best resorts by private jets</label>
+                                </div>
+                                <div class="form-check">
+                                    <input type="checkbox" id="cruise_shipsCheckbox">
+                                    <label for="cruise_shipsCheckbox">豪華客船</label>
                                 </div>
                             </div>
                         </div>
