--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                                     <option value="fly-maldives">モルディブ</option>
                                     <option value="fly-polynesia">ポリネシア</option>
                                     <option value="fly-seychelles">セーシェル</option>
+                                    <option value="fly-cuyo">クーヨー諸島</option>
                                 </select>
                             </div>
                         </form>
@@ -101,7 +102,11 @@
                                 </div>
                                 <div class="form-check">
                                     <input type="checkbox" id="private_jetsCheckbox">
-                                    <label for="private_jetsCheckbox">Best resorts by private jets</label>
+                                    <label for="private_jetsCheckbox">プライベート・ジェット (リゾート)</label>
+                                </div>
+                                <div class="form-check">
+                                    <input type="checkbox" id="miceCheckbox">
+                                    <label for="miceCheckbox">MICE (City)</label>
                                 </div>
                                 <div class="form-check">
                                     <input type="checkbox" id="cruise_shipsCheckbox">
