link between files

--- a/index.html
+++ b/index.html
@@ -44,7 +44,35 @@
         <div class="container bg-light position-fixed px-4" style="width: 75px; height:100vh; z-index:3">
             <!-- オフキャンバス icon -->
             <div class="mt-4">
-                <img src="./img/arrows_gray.svg" type="button" data-bs-toggle="offcanvas" data-bs-target="#off-canvas">
+                <img src="./img/arrows.svg" type="button" data-bs-toggle="offcanvas" data-bs-target="#off-canvas">
+            </div>
+            <hr style="background-color: #191919; height: 3px;">
+            <!-- 沖縄データ icon -->
+            <div class="mt-4">
+                <div class="image-container">
+                    <a href="../okinawa/index.html">
+                        <img src="./img/data.svg" alt="Image" class="image-tooltip">
+                    </a>
+                    <span class="tooltip-text">沖縄データ</span>
+                </div>
+            </div>
+            <!-- 海外事例 icon -->
+            <div class="mt-4">
+                <div class="image-container">
+                    <a href="#">
+                        <img src="./img/overseas.svg" alt="Image" class="image-tooltip">
+                    </a>
+                    <span class="tooltip-text">海外事例</span>
+                </div>
+            </div>
+            <!-- グランドデザイン icon -->
+            <div class="mt-4">
+                <div class="image-container">
+                    <a href="../grand_design/index.html" target="_blank" rel="noopener noreferrer">
+                        <img src="./img/grand_design.svg" alt="Image" class="image-tooltip">
+                    </a>
+                    <span class="tooltip-text">グランド・デザイン</span>
+                </div>
             </div>
         </div>
 
