cruise and source link

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="mt-4">
                 <img src="./img/arrows.svg" type="button" data-bs-toggle="offcanvas" data-bs-target="#off-canvas">
             </div>
-            <hr style="background-color: #191919; height: 3px;">
+            <hr style="background-color: #191919; height: 2px;">
             <!-- 沖縄データ icon -->
             <div class="mt-4">
                 <div class="image-container">
@@ -74,6 +74,16 @@
                     <span class="tooltip-text">グランド・デザイン</span>
                 </div>
             </div>
+            <hr style="background-color: #191919; height: 2px;">
+            <!-- データソース icon -->
+            <div class="mt-4">
+            <div class="image-container">
+                <a href="../source/index.html" target="_blank" rel="noopener noreferrer">
+                    <img src="./img/source.svg" alt="Image" class="image-tooltip">
+                </a>
+                <span class="tooltip-text">データソース</span>
+            </div>
+        </div>
         </div>
 
         <!-- サイドバー: コントロールパネル -->
@@ -138,7 +148,7 @@
                                 </div>
                                 <div class="form-check">
                                     <input type="checkbox" id="cruise_shipsCheckbox">
-                                    <label for="cruise_shipsCheckbox">豪華客船</label>
+                                    <label for="cruise_shipsCheckbox">クルーズ</label>
                                 </div>
                             </div>
                         </div>
