cruise lines and circles

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                                 </div>
                                 <div class="form-check">
                                     <input type="checkbox" id="cruise_shipsCheckbox">
-                                    <label for="cruise_shipsCheckbox">クルーズ</label>
+                                    <label for="cruise_shipsCheckbox">クルーズ (15+days, $1,500+)</label>
                                 </div>
                             </div>
                         </div>
