--- a/index.html
+++ b/index.html
@@ -136,11 +136,11 @@
                                 </div>
                                 <div class="form-check">
                                     <input type="checkbox" id="luxury_hotelsCheckbox">
-                                    <label for="luxury_hotelsCheckbox">ラグジュアリー・ホテル</label>
+                                    <label for="luxury_hotelsCheckbox">ラグジュアリー・リゾート</label>
                                 </div>
                                 <div class="form-check">
                                     <input type="checkbox" id="private_jetsCheckbox">
-                                    <label for="private_jetsCheckbox">プライベート・ジェット (リゾート)</label>
+                                    <label for="private_jetsCheckbox">プライベート・ジェット (Top Destinations)</label>
                                 </div>
                                 <div class="form-check">
                                     <input type="checkbox" id="miceCheckbox">
